# waitplaying

./: .gitignore  Dockerfile  README.md  README_ES.md  data.json  docker-compose.yml  examen.txt  games.md  index.html  package-lock.json
back-end/: .gitignore  Dockerfile  db.sqlite3  db.sqlite3-journal  docker-compose.yml  manage.py  notes.md  pyproject copy.toml  pyproject.toml  requirements.txt
back-end/api/: GPScrapper.py  admin.py  api.py  global_functions.py  main_scrapper.py  scrapper.py  serializers.py  urls.py  views.py
back-end/api/auth/: backends.py  urls.py  views.py
back-end/api/management/: cron.py
back-end/api/migrations/: 0001_initial.py  0002_alter_game_id.py  0002_customuser_delete_note.py  0002_delete_user.py  0003_alter_customuser_options_alter_customuser_managers_and_more.py  0003_note.py  0003_remove_game_version_parent_alter_game_category_and_more.py  0004_alter_game_category_alter_game_status.py  0004_note_delete_customuser.py  0004_usergameset.py  0005_log_alter_gamepassconsolecatalog_options_and_more.py  0005_releasedate_category.py  0005_remove_game_checksum.py  0006_platform_releasedate.py  0006_pspluscatalog_gamepasscatalog.py  0007_alter_gamepasscatalog_end_date_and_more.py  0007_game_platforms.py  0008_alter_game_platforms_screenshot_cover_company_and_more.py  0008_alter_gamepasscatalog_end_date_and_more.py  (+35 more)
back-end/static/: index-673af837.5ba4c60f5ba8.css  staticfiles.json
back-end/templates/: index.html
back-end/users/: urls.py  views.py
back-end/waitplayingAPI/: asgi.py  settings copy.py  settings.py  urls.py  wsgi.py
(+759 files in other folders)
