[tool.poetry]
name = "waitplaying-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "waitplaying_api"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
