[tool.poetry]
name = "waitplaying-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "waitplaying_api"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
requests = "^2.28.2"
django-cors-headers = "^3.13.0"
whitenoise = "^6.3.0"
unidecode = "^1.3.6"
pyjwt = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
