[tool.poetry]
name = "waitplaying"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "waitplaying"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
requests = "^2.28.2"
django-cors-headers = "^3.13.0"
whitenoise = "^6.3.0"
unidecode = "^1.3.6"
djangorestframework-simplejwt = "^5.2.2"
bs4 = "^0.0.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
